--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
         .main{
             font-family:仿宋;
             font-weight:700;
-            text-align: left;
+            text-align: center;
             font-size: 20px;
         }
-
+        #main1{
+            text-align: center;
+        }
     </style>
 
     
 </head>
 <body>
     <span style="font-family: 隶书;font-weight: 600;">关于我</span><br>
-    <img src="./MHLY8271.JPG" alt="" height="300px" >
+    <p id="main1"><img src="./MHLY8271.JPG" alt="" height="300px" ></p>
     <p class="main">大家好</p>
     <p class="main">我是李睿恒</p>
     <p class="main">来自力旺初中</p>
