--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="李睿恒的自我介绍主页">
+    <meta name="keywords" content="李睿恒,开发者,小白,学生">
     <title>李睿恒的自我介绍</title>
     <style>
         .main{
