--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <p class="main">有关电脑科学、电子工程及编程，你可以向我投稿</p>
     <p class="main">我会上载到我的网站</p>
     <p class="main">如果你想联系我：</p>
+    <p>最后修改时间：20240719</p>
     <p>注：该网站未实施</p>
     <a href="tel:+86 19204408797">这是我的电话(微信同)</a><br>
     <a href="henry100509@outlook.com">我的outlook邮箱 henry100509@outlook.com</a><br>
